@@ -1,5 +1,6 @@
 2016 aug
 + Tune - Images - Use EXIF orientation at image viewer
++ Tune - Images - Apply hard rotation by EXIF data
 + new themes and palettes
 
 2016 summer
